@@ -5,6 +5,8 @@ WISH? monotonic clocks times/GetTickCount for coarse corrections?
 	- further optimise away the EPOLL_CTL_ADD/MOD combo in the epoll
           backend by assuming the kernel event mask hasn't changed if
           ADD fails with EEXIST.
+        - work around spurious event notification bugs in epoll by using
+          an 8-bit generation counter.
         - use memset to initialise most arrays now and do away with the
           init functions.
         - expand time-out strategies into a "Be smart about timeouts" section.
